# entraid-mcp-server

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish-entraid-mcp-server.yml
config/: .env.example
src/msgraph_mcp_server/: __main__.py  server.py
src/msgraph_mcp_server/auth/: graph_auth.py
src/msgraph_mcp_server/resources/: applications.py  audit_logs.py  conditional_access.py  groups.py  managed_devices.py  mfa.py  password_auth.py  permissions_helper.py  service_principals.py  signin_logs.py  users.py
src/msgraph_mcp_server/utils/: graph_client.py
