[project]
name = "entraid-mcp-server"
version = "0.2.0"
description = "FastMCP server for Microsoft Graph / Entra ID, using Azure DefaultAzureCredential by default."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-core>=1.39.0",
    "azure-identity>=1.25.3",
    "fastmcp>=2.10.0",
    "msgraph-core>=1.3.8",
    "msgraph-sdk>=1.56.0",
    "python-dotenv>=1.1.0",
]
